test/bad/generics/print03.px

func f<Any T>(T x) T def
    return x

print f([1]), f(2)
